src/App.css
/* KT color palette */
[data-theme='teto'] {
    --background: #2a2433;
    --decoration: #854462;
    --text-primary: #d46a83;
    --text-secondary: #f4dfde;
    --accent: #9e8ba4;
}
/* HM color palette */
[data-theme='miku'] {
    --background: #eff1f4;
    --decoration: #2896ae;
    --text-primary: #48b3c8;
    --text-secondary: #cee2e4;
    --accent: #8b9fa2;
}
/* KR color palette */
[data-theme='rin'] {
    --background: #3e3e3e;
    --decoration: #ff9100;
    --text-primary: #ffe600;
    --text-secondary: #464646;
    --accent: #fff261;
}
/* GM color palette */
[data-theme='gumi'] {
    --background: #223b1f;
    --decoration: #ff0080;
    --text-primary: #ff8800;
    --text-secondary: #464646;
    --accent: #00ffd9;
}
/* UU color palette */
[data-theme='defoko'] {
    --background: #3c3155;
    --decoration: #7536b5;
    --text-primary: #6948cd;
    --text-secondary: #C5A3BF;
    --accent: #9267BE;
}

/* main container */
.main-container {
    background-color: var(--background);
    display: inline-block;
    min-width: 100%;
}

/* transition */
* {
    transition: all 0.15s ease-in-out;
}

/* text */
h1, h2, h3, h4, h5, h6, p {
    color: var(--text-primary) !important;
}
.form-label {
    color: var(--text-primary) !important;
}
.fs-5 {
    color: var(--text-primary) !important;
}

/* bs forms */
.form-control {
    background-color: var(--background);
    color: var(--text-primary);
    border: 1px solid var(--decoration);
}
.form-control:hover {
    background-color: var(--background);
    color: var(--text-primary);
    border-color: var(--decoration);
    outline: 0;
    box-shadow: 0 0 0 .25rem var(--text-primary);
}
.form-control:focus {
    background-color: var(--background);
    color: var(--text-primary);
    border-color: var(--decoration);
    outline: 0;
    box-shadow: 0 0 0 .25rem var(--text-primary);
}

/* bs buttons */
.btn-primary {
    color: var(--text-secondary);
    background-color: var(--decoration);
    border-color: var(--decoration);
}
.btn-primary:hover, 
.btn-primary:active {
    color: var(--text-secondary) !important;
    background-color: var(--text-primary) !important;
    border-color: var(--text-primary) !important;
}
.btn-outline-secondary {
    color: var(--accent);
    background-color: var(--background);
    border-color: var(--accent);
}
.btn-outline-secondary:hover,
.btn-outline-secondary:active {
    color: var(--text-secondary)!important;
    background-color: var(--accent) !important;
    border-color: var(--accent) !important;
}
.btn-outline-danger {
    color: var(--decoration);
    background-color: var(--background);
    border-color: var(--decoration);
}
.btn-outline-danger:hover,
.btn-outline-danger:active {
    color: var(--text-secondary) !important;
    background-color: var(--decoration) !important;
    border-color: var(--decoration) !important;
}

/* bs cards */
.card {
    background-color: var(--background);
    color: var(--text-primary);
    border: 1px solid var(--decoration);
    transition: translate ease-in-out 100ms, box-shadow ease-in-out 100ms;
}
.card:hover, 
.card:focus {
    translate: 0 -5px;
    box-shadow: 0 5px 8px 0 var(--decoration);
}

/* bs badge */
.badge,
.bg-primary {
    background-color: var(--decoration) !important;
    color: var(--text-secondary) !important;
}

/* bs modal */
.modal-content {
    background-color: var(--background) !important;
    color: var(--text-primary) !important;
}
.modal-header {
    border-color: var(--decoration);
}
.btn-close {
    color: var(--text-primary) !important;
}

/* react-select/creatable begin */
/* main div */
.css-13cymwt-control * {
    color: var(--decoration) !important;
}
.css-13cymwt-control {
    background-color: var(--background) !important;
    color: var(--decoration) !important;
    border: 1px solid var(--decoration) !important;
}
.css-13cymwt-control:hover {
    background-color: var(--background) !important;
    color: var(--decoration) !important;
    border-color: var(--decoration) !important;
    outline: 0 !important;
    box-shadow: 0 0 0 .25rem var(--text-primary) !important;
}

.css-t3ipsp-control {
    background-color: var(--background) !important;
    color: var(--decoration) !important;
    border-color: var(--decoration) !important;
    outline: 0 !important;
    box-shadow: 0 0 0 .25rem var(--text-primary) !important;
}
.css-t3ipsp-control:hover {
    background-color: var(--background) !important;
    color: var(--decoration) !important;
    border-color: var(--decoration) !important;
    outline: 0 !important;
    box-shadow: 0 0 0 .25rem var(--text-primary) !important;
}

/* tag box */
.css-1p3m7a8-multiValue {
    color: var(--decoration) !important;
    background-color: var(--accent)  !important;
}
.css-v7duua:hover {
    color: var(--accent) !important;
    background-color: var(--decoration)  !important;
}
.css-9jq23d {
    color: var(--decoration) !important;
}

/* arrow */
.css-1xc3v61-indicatorContainer {
    color: var(--decoration) !important;
}
.css-1xc3v61-indicatorContainer:hover {
    color: var(--text-primary) !important;
}
/* cross */
.css-15lsz6c-indicatorContainer {
    color: var(--decoration) !important;
}
.css-15lsz6c-indicatorContainer:hover {
    color: var(--text-primary) !important;
}
/* separator */
.css-1u9des2-indicatorSeparator {
    background-color: var(--decoration) !important;
}
.css-1u9des2-indicatorSeparator:hover {
    background-color: var(--text-primary) !important;
}

/* input field and placeholder */
.css-19bb58m {
    color: var(--decoration) !important;
}
.react-select-3-input {
    color: var(--decoration) !important;
}
.react-select-3-input:focus {
    color: var(--decoration) !important;
}
.react-select-3-placeholder {
    color: var(--decoration) !important;
}
.react-select-3-placeholder:focus {
    color: var(--decoration) !important;
}
.css-1jqq78o-placeholder {
    color: var(--decoration) !important;
}
.css-1cfo1cf {
    color: var(--decoration) !important;
}

/* menu */
.css-1nmdiq5-menu * {
    color: var(--decoration) !important;
    background-color: var(--accent)  !important;
}
/* react-select/creatable end */

